--- a/main.css
+++ b/main.css
@@ -1,4 +1,6 @@
 
+
+
   /* Hide scrollbar for Chrome, Safari and Opera */
   html::-webkit-scrollbar {
     display: none;
@@ -6,229 +8,201 @@
 
   /* Hide scrollbar for IE and Edge */
   html {
+    content: "";
     -ms-overflow-style: none;
+    padding: 0ch;
+    margin: 0ch;
   }
-  div#disc {
-    font-size: initial;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-  ul {
-    /* padding: 10px; */
-    animation: move 0.3s ease-in-out;
-    list-style: none;
-  transition: ease all .5s;
+
+
+  
+  body {
+    content: "";
+    margin: 0;
+    font-size: 3rem;
+    font-family: arial;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
-  ul {
-    display: grid;
-    gap: 1rem;
-}ul#name {
-    max-width: 500px;
-    margin: auto;
-}
-
-label {
-    display: none;
-}
-
-img#secureIm {
-    width: 100px;
-    /* position: absolute; */
-    margin-block: 20px;
-}
-
-form > ul > li {background: dodgerblue;color: aliceblue;padding: .6rem;margin: auto;width: 100%;}
+  
 
 
-:root {
-  --marquee-width: 100%;
-  --marquee-height: 14vh;
-  /* --marquee-elements: 12; */ /* defined with JavaScript */
-  --marquee-elements-displayed: 5;
-  --marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
-  --marquee-animation-duration: calc(var(--marquee-elements) * 3s);
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-.marquee {
-  width: var(--marquee-width);
-  /* height: var(--marquee-height); */
-  background-color: #fff;
-  color: #eee;
-  overflow: hidden;
-  position: relative;
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
-.marquee:before, .marquee:after {
-  position: absolute;
-  top: 0;
-  width: 10rem;
-  height: 100%;
-  content: "";
-  z-index: 1;
-}
-.marquee:before {
-  left: 0;
-  background: linear-gradient(to right, #fff 0%, transparent 100%);
-}
-.marquee:after {
-  right: 0;
-  background: linear-gradient(to left, #fff 0%, transparent 100%);
-}
-.marquee-content {
-  list-style: none;
-  height: 100%;
-  display: flex;
-  animation: scrolling var(--marquee-animation-duration) linear infinite;
-}
-/* .marquee-content:hover {
-  animation-play-state: paused;
-} */
-@keyframes scrolling {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(calc(-1 * var(--marquee-element-width) * var(--marquee-elements))); }
-}
-.marquee-content li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* text-align: center; */
-  flex-shrink: 0;
-  width: var(--marquee-element-width);
-  max-height: 100%;
-  font-size: calc(var(--marquee-height)*3/4); /* 5rem; */
-  white-space: nowrap;
-  /* padding: inherit; */
-  /* height: fit-content; */
-}
+::-webkit-input-placeholder {
+    text-transform: capitalize;
+  }
+  ::placeholder {
+    text-transform: capitalize;
+  }
 
-.marquee-content li img {
-  width: 50%;
-  /* height: 100%; */
-  /* border: none; */
-  margin: inherit;
-}
-div#container {
-  display: grid;
-  gap: 1rem;
-  grid-template-columns: 10% 80% 10%;
-}
-#home_type,#home_year,#home_value {
-  grid-template-columns: auto auto auto;
-  padding: 0;
-  width: inherit;
-}
-
-form > ul {
-    gap: 1rem 3rem;
-}
-#container > div> img {
-  max-width: 100%;
-  margin: auto;
-  padding: 0;
-  margin: auto;
-  position: relative;
-}
-
-
-div#container {
-  display: grid;
-  /* gap: 1rem; */
-  grid-template-columns: 10vw auto 10vw;
-  margin-inline: auto;
-  /* position: relative; */
-  width: 100%;
-  text-align: center;
-  position: relative;
-}
-
-#container > div> img {
-  /* max-width: 100%; */
-  margin: auto;
-  padding: 0;
-  margin: auto;
-  position: relative;
-}
-
-
-#container > div {margin: auto;padding: initial;}
-
-html {
-  padding: 0ch;
-  margin: 0ch;
-}
-
-body {margin: 0;padding: 2ch;max-width: calc(100% - 2ch);font-size: 3rem;font-family: arial;}
-
-div#header {
-  margin: auto;
-  padding: 0;
-  width: 100%;
-  text-align: center;
-  display: block;
-  overflow: hidden;
-}
-div#content {
-  /* display: flex; */
-  margin: auto;
-  text-align: center;
-}
-input, select {
-  border: none;
-  border-bottom: #0d8eff 1px solid;
-  padding: 1.6rem 0rem 0em;
-  font-size: smaller;
-  color: black;
-  max-width: 500px;
-  margin: auto;
-  width: 100%;
-
-}
-
-::placeholder {
-  color: black;
-}
-
-div#carriers-containers {
-  /* display: none; */
-  position: absolute;
-  text-align: center;
-  margin: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 500px;
-  height: 312px;
-  background: white;
-}
-.mySlides {
-  height: 450px;
-  margin: auto;
-  align-items: center;
-  position: relative;
-}
-.mySlides >img {
-  width: auto;
-  max-height: 260px;
-}
-form {
-  max-width: 80%;
-  margin: auto;
-  padding-block: 38px;
+  h1, h2, h3, h4, h5, h6, p, blockquote, address, big, cite, code, em, font, img, small, strike, sub, sup, li, ol, ul, fieldset, form, label, legend, button, table, caption, tr, th, td, select ,input{
+    border: none;
+    font-size: 2.2rem;
+    line-height: inherit;
+    margin: 0;
+    padding: 0;
+    text-align: inherit;
 }
 
 
 
 
-/*
-:root {
-  colors #374c77
-         #415695
+.valid{
+  background-color: #35b635!important;
+  color: aliceblue!important;
+  animation: .5s show ease-in-out;
+}
+.error{
+  background-color: tomato!important;
+  color: white!important;
+  animation: .5s show ease-in-out;
 
--webkit-box-shadow: inset 0px 0px 16px 5px rgba(65,85,191,0.81); 
-box-shadow: inset 0px 0px 16px 5px rgba(65,85,191,0.81);
+}
+.error::-webkit-input-placeholder{
+  color: white;
+}
+.error::placeholder{
+  color: white;
+}
+.error:active{
+  color: white;
 }
 
 
-*/
+.show {
+  animation: show 1s ease-in-out;
+}
+
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+
+
+.blink {
+  -webkit-animation: 1s blink step-end infinite!important;
+  -moz-animation: 1s blink step-end infinite!important;
+  -ms-animation: 1s blink step-end infinite!important;
+  -o-animation: 1s blink step-end infinite!important;
+  animation: 1s blink step-end infinite!important;
+}
+
+
+
+
+
+
+  @-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+
+
+
+  @keyframes showImage {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+
+
+    
+  @keyframes blink {
+    from, to {
+      color: transparent;
+    }
+    50% {
+      color: #2f9ee9;
+    }
+  }
+  
+  @-moz-keyframes blink {
+    from, to {
+      color: transparent;
+    }
+    50% {
+      color: #2f9ee9;
+    }
+  }
+  
+  @-webkit-keyframes blink {
+    from, to {
+      color: transparent;
+    }
+    50% {
+      color: #2f9ee9;
+    }
+  }
+  
+  @-ms-keyframes blink {
+    from, to {
+      color: transparent;
+    }
+    50% {
+      color: #2f9ee9;
+    }
+  }
+  
+  @-o-keyframes blink {
+    from, to {
+      color: transparent;
+    }
+    50% {
+      color: #2f9ee9;
+    }
+  }
+  @keyframes show {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+  @keyframes move {
+    from {
+      margin-left: -300px;
+    }
+
+    to {
+      margin-left: 0;
+    }
+  }
+
+
+  
+  @keyframes moveUp {
+    from {
+      margin-bottom: -300px;
+      opacity: 0;
+    }
+
+    to {
+      margin-bottom: 0;
+      opacity: 1;
+    }
+  }
